[main.php] Fix l'alignement des différents ul

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -367,6 +367,10 @@ header nav ul li > button{
     align-items: center;
 }
 
+.presentation-list ul{
+    padding: 0 40px 0 20px;
+}
+
 .presentation span{
     color: #460B4A;
 }
@@ -895,6 +899,7 @@ footer nav > ul {
     list-style: None;
     gap: 275px;
     flex-wrap: wrap;
+    padding: 0;
 }
 
 footer nav ul li {
@@ -936,7 +941,7 @@ footer nav ul div ul {
 }
 
 footer nav ul div ul img{
-    height: 50px;
+    height: 42px;
     width: 50px;
 }
 
@@ -1357,6 +1362,7 @@ footer nav div p{
         align-items: flex-start;
         margin-block-start: 0;
         padding-inline-start: 0;
+        padding: 0;
     }
 
     footer nav ul div ul{
